--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
       <div class="container wow fadeInUp">
         <div class="section-header">
           <h3 class="section-title">Equipo</h3>
-          <p class="section-description">En Césped Artifical S.L. los recursos humanos son lo más importante.</p>
+          <p class="section-description">En Césped Artifical S.L. el valor lo aportan las personas.</p>
         </div>
         <div class="row">
           <div class="col-lg-3 col-md-6"></div>
