c panel and page description and google verification

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <title>Césped Artificial, S.L.</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="cesped, artificial, cesped-artificial, diseño, diseño-interiores, diseño-exteriores" name="keywords">
-  <meta content="cesped artificial" name="description">
+  <meta content="Césped Artificial S.L. Empresa dedicada a la instalación de césped artificial, con más de 15 años de experiencia en el sector." name="description">
+  <meta name="google-site-verification" content="R9GFXYEt9VA9VnYU70o2dydFCcC6rF6o94aC0F5ozf8" />
 
   <!-- Favicons -->
   <link href="img/icon.png" rel="icon">
