Added info and format

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             <div class="icon-box wow fadeInUp">
               <div class="icon"><i class="fa fa-university"></i></div>
               <h4 class="title"><a href="">Experiencia</a></h4>
-              <p class="description">Nos avalan más de 10 años de servicio a nuestros clientes en los que hemos desarrollado soluciones innovadoras en todos los campos de aplicación del césped artificial.</p>
+              <p class="description">Nos avalan más de 15 años de servicio a nuestros clientes en los que hemos desarrollado soluciones innovadoras en todos los campos de aplicación del césped artificial.</p>
             </div>
 
             <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
@@ -145,20 +145,23 @@
   				<div class="col-lg-3 col-6 text-center">
             <p>Más de </p>
             <span data-toggle="counter-up">1000</span>
-            <p>Clientes</p>
+            <p>Clientes satisfechos</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
+            <p>Alrededor de</p>
             <span data-toggle="counter-up">2000</span>
-            <p>Proyectos</p>
+            <p>Proyectos realizados</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">20</span>
-            <p>Años</p>
+            <p>Más de</p>
+            <span data-toggle="counter-up">15</span>
+            <p>Años de experiencia</p>
   				</div>
 
           <div class="col-lg-3 col-6 text-center">
+            <p>Tenemos</p>
             <span data-toggle="counter-up">3</span>
             <p>Marcas registradas</p>
   				</div>
@@ -175,7 +178,7 @@
       <div class="container wow fadeIn">
         <div class="section-header">
           <h3 class="section-title">Servicios</h3>
-          <p class="section-description">Ofrecemos servicios personalizados en función de tus necesidades.</p>
+          <p class="section-description">Ofrecemos servicios personalizados en función de tus necesidades</p>
         </div>
         <div class="row">
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
@@ -226,6 +229,42 @@
     </section><!-- #services -->
 
     <!--==========================
+      Resources Section
+    ============================-->
+    <section id="resources">
+        <div class="container wow fadeIn">
+          <div class="section-header">
+            <h3 class="section-title">Materiales</h3>
+            <p class="section-description">Trabajamos con varios proveedores de marcas de calidad</p>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+              <div class="box">
+                <div class="icon"><a href=""><i class="fa fa-desktop"></i></a></div>
+                <h4 class="title"><a href="">Turfgrass</a></h4>
+                <p class="description">Pensado para interiores</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+              <div class="box">
+                <div class="icon"><a href=""><i class="fa fa-bar-chart"></i></a></div>
+                <h4 class="title"><a href="">Golden grass</a></h4>
+                <p class="description">Pensado para exteriores</p>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
+              <div class="box">
+                <div class="icon"><a href=""><i class="fa fa-photo"></i></a></div>
+                <h4 class="title"><a href="">Star grass</a></h4>
+                <p class="description">Pensado para uso deportivo</p>
+              </div>
+            </div>
+            
+          </div>
+  
+        </div>
+      </section><!-- #services -->
+    <!--==========================
     Call To Action Section
     ============================-->
     <section id="call-to-action">
@@ -233,7 +272,7 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h3 class="cta-title">Infórmate</h3>
-            <p class="cta-text">Si estás planteándote contratar nuestros servicios, contacta con nosotros para obtener un presupuesto.</p>
+            <p class="cta-text">Si estás planteándote contratar nuestros servicios, contacta con nosotros para obtener un presupuesto</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle" href="#contact">Dar el paso</a>
