--- a/index-portfolio.html
+++ b/index-portfolio.html
@@ -460,7 +460,9 @@
         <div id="logo" class="pull-left">
           <img src="img/logos/logo.png" alt="logo" title="masverdemenosagua" height="35" /></img>
         </div>
-      
+        <div id="logo" class="pull-right">
+          <img src="img/logos/golfinnR.png" alt="logo" title="golfinn" height="35" /></img>
+        </div>
         <!-- <div class="copyright">
           <img src="img/logos/cesped-artificial.png" alt="logo" title="cespedartificial" height="35" /></img>
         </div> -->
