--- a/index-portfolio.html
+++ b/index-portfolio.html
@@ -82,7 +82,7 @@
 
           <div class="col-lg-12">
             <ul id="portfolio-flters">
-              <li data-filter=".filter-garden, .filter-park, .filter-sport, .filter-openspace" class="filter-active">All</li>
+              <li data-filter=".filter-garden, .filter-park, .filter-sport, .filter-openspace" class="filter-active"></li>
               <li data-filter=".filter-garden" >Jardines</li>
               <li data-filter=".filter-park">Parques</li>
               <li data-filter=".filter-sport">Pistas</li>
