--- a/index-portfolio.html
+++ b/index-portfolio.html
@@ -63,6 +63,7 @@
             </ul>
           </li>
           <li  class="menu-active"><a href="#portfolio">Trabajos</a></li>
+          <li><a href="index-downloads.html#downloads">Descargas</a></li>
           <li><a href="#contact">Contacto</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
