--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             </ul>
           </li>
           <li><a href="index-portfolio.html#portfolio">Trabajos</a></li>
+          <li><a href="index-downloads.html#downloads">Descargas</a></li>
           <li><a href="#contact">Contacto</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
